--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -24,7 +24,5 @@ jobs:
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
 
     - name: Run tests
-      run: |
-        python -m unittest discover -s PyPaletteAnalyzer/test -p "*test.py"
-      env:
-        PYTHONPATH: PyPaletteAnalyzer/src
+      run: pytest
+      continue-on-error: false
