--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -24,5 +24,5 @@ jobs:
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
 
     - name: Run tests
-      run: pytest
+      run: unittest
       continue-on-error: false
