Update Pytest Workflow

--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -4,9 +4,7 @@ on:
   push:
     branches: [main]
 
-
 jobs:
-
   build:
     runs-on: ubuntu-latest
 
@@ -24,5 +22,5 @@ jobs:
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
 
     - name: Run tests
-      run: unittest
+      run: python PyPaletteAnalyzer/test/pytest.py
       continue-on-error: false
