--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -1,26 +1,24 @@
-name: Python Tests
+name: Run Unit Tests
 
 on:
   push:
-    branches: [main]
+    branches: [ main ]
 
 jobs:
-  build:
+  test:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v3
+    - name: Checkout code
+      uses: actions/checkout@v2
+
     - name: Set up Python
-      uses: actions/setup-python@v4
+      uses: actions/setup-python@v2
       with:
         python-version: 3.9
 
     - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install numpy opencv-python scikit-learn webcolors matplotlib
-        if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+      run: pip install -r requirements.txt
 
-    - name: Run tests
-      run: python PyPaletteAnalyzer/test/pytest.py
-      continue-on-error: false
+    - name: Run unit tests
+      run: python -m unittest discover
